infra/kube/infrastructure/argocd/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.rappet-home.de"
  rules:
  - host: "argocd.rappet-home.de"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port: 
              number: 80
